packages/jsts/tests/dbd/benchmark/TypeError/T08 Reduce of empty array with no initial value/T08-02/fixed.mjs
import { getArrayStats } from './fixed-utils.mjs';
getArrayStats([])
